bug 321558: document.write into a new window or frame won't set the title of the new document. Void out the old title so that we know that there hasn't been a real <title> yet. r+sr=bzbarsky